--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ dash==2.14.1
 pandas==2.1.4
 plotly==5.18.0
 gunicorn==21.2.0
+statsmodels==0.14.1
+numpy==1.24.4  # Necessário para statsmodels
+scipy==1.10.1  # Necessário para statsmodels
